--- a/takeaways1.html
+++ b/takeaways1.html
@@ -16,7 +16,7 @@
 <h3>Knowledge Organization</h3>
 
 <p class="counter">
-Replace this text with your takeaway of Lecture 2 about the topic of "Knowledge Organization". Use between 100 and 200 words.
+There are many examples of knowledge organisation systems, some of which are the wikipedia, Databases, the World Wide Web. The purpose of these systems, as their title already indicates, is to organise the huge amount of knowledge/information that might exist within a specific domain, in a way that makes it easier and faster to us to access information and make use of it. This knowledge is represented in many different ways, where knowledge representation examples include Natural Language Text, Database Entries, Diagrams. Knowledge organisation is to some extend similar to machine learning, where both are subfield of artificial intelligence. However,   knowledge organisation is done manually by humans where automatic reasoning can be performed, whilst machine learning is done by the computer to find patterns in data. Four types of knowledge organisation exist: organization of Physical things, Information about physical things, Digital things:, Information about digital things. Knowledge organization can be done by the cooperation between different parties: Knowledge Representation Experts, Domain Experts, Non-Expert Users, Crowdsourcing Workers.
 </p>
 
 <h2>Literature</h2>
