--- a/takeaways1.html
+++ b/takeaways1.html
@@ -24,13 +24,15 @@ There are many examples of knowledge organisation systems, some of which are the
 <h3>Voida et al. 2011</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Voida et al. Cite it as [Voida et al. 2011]. Use between 100 and 200 words.
+Voida et al. (2011) conducted a qualitative study with nonprofit organizations in the United States. They studied the information management practices of volunteer coordinators, who are responsible for organising and managing the information about volunteers, e.g. contact information, experience, and schedules. With very little support and training in information technology, the volunteer coordinators created their own information management systems, and they called them “homebrew databases”. The choice of the homebrew databases to be used depends on a number of features: 1) how diverse and fluid the information needs, stakeholders, and work contexts are, and 2) the  constraints in time, funding, and expertise. 
+These systems are still insufficient for the coordinators’ needs, and each system has its own shortcomings. As a result, volunteer coordinators face difficulties/ and technical constraints with managing the information about volunteers, and they wish to have only one software, in which they can acces and manage all information they need. 
+Voida et al. (2011) suggest future work in which more human-centred databases are designed, which can be easily accessible by staff with little expertise in information technology. Voida et al. (2011) also suggest developing mechanisms that facilitate data migration between different datasets. 
 </p>
 
 <h3>Guha et al. 2016</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Guha et al. Cite it as [Guha et al. 2016]. Use between 100 and 200 words.
+Guha et al. (2016) describe the stages in which data has been structured on the Web. The early goal was to enable many different applications to use data from different sources. Many attempts took place to enable accessibility to structured data, e.g. the XML attempt to standardize the syntax on the Web. Schema.org was introduced in 2011, by the major search engines Google,  Bing, and Yahoo, where to goal was to provide web developers  a single vocabulary. Data structured following the schema.org standards, are being used in many places, such as email messages. The success of schema.org was been measured by the level of adoption of schema.org mark-ups, which is considered to be very high. This success is due to a number of design decisions taken when schema.org vocabulary was being developed, for example, the ability for webmasters to choose between the syntaxes the one they prefer. 
 </p>
 
 <h2>References</h2>
