--- a/takeaways1.html
+++ b/takeaways1.html
@@ -26,7 +26,7 @@ There are many examples of knowledge organisation systems, some of which are the
 <p class="counter">
 Voida et al. (2011) conducted a qualitative study with nonprofit organizations in the United States. They studied the information management practices of volunteer coordinators, who are responsible for organising and managing the information about volunteers, e.g. contact information, experience, and schedules. With very little support and training in information technology, the volunteer coordinators created their own information management systems, and they called them “homebrew databases”. The choice of the homebrew databases to be used depends on a number of features: 1) how diverse and fluid the information needs, stakeholders, and work contexts are, and 2) the  constraints in time, funding, and expertise. 
 These systems are still insufficient for the coordinators’ needs, and each system has its own shortcomings. As a result, volunteer coordinators face difficulties and technical constraints with managing the information about volunteers, and they wish to have only one software, in which they can acces and manage all information they need. 
-Voida et al. (2011) suggest future work in which more human-centred databases are designed, which can be easily accessible by staff with little expertise in information technology. Voida et al. (2011) also suggest developing mechanisms that facilitate data migration between different datasets. 
+Voida et al. (2011) suggest future work in which more human-centred databases are designed, which can be easily accessed by staff with little expertise in information technology. Voida et al. (2011) also suggest developing mechanisms that facilitate data migration between different datasets. 
 
 </p>
 
