--- a/takeaways3.html
+++ b/takeaways3.html
@@ -16,13 +16,13 @@
 <h3>Logic</h3>
 
 <p class="counter">
-Replace this text with your takeaway of Lecture 5 about the topic of "Logic". Use between 100 and 200 words.
+There are a number of logic formalisms that we can use, which include propositional logic, syllogisms, description logic, first-order logic, and  higher-order logic. There are also different notations that can be used to express them, where the most commonly used notation is the mathematical/formal notations, and other less used notations are graphical notations, and natural language notations. Syllogisms is a simple logic formalism, which mostly comes in a package of three sentences. For each of the logic formalisms mentioned above, there is a trade-off between expressivity and complexity on one hand, and decidability and efficiency on the other hand. An expressive, and complex formalism, implies that the formalism will be undecidable, and inefficient, and vice versa. First-order logic is the most understood formal language that can be used in many tasks, for example in the task of finding mistakes, and in the task of checking conclusions. 
 </p>
 
 <h3>Ontologies</h3>
 
 <p class="counter">
-Replace this text with your takeaway of Lecture 6 about the topic of "Ontologies". Use between 100 and 200 words.
+While in philosophy, ontology refers to the things that exist in the world, in IT an ontology refers to “explicit specification of a conceptualization” Gruber (1995). Schreiber (2021) defines the idea of building formal ontologies by the ability to use ontologies that already exist, and that are built by someone else. By using existing ontologies, we can imagine building a whole application by the use of existing data models, and ontologies. The primary component of ontologies is concepts, where concepts help with organising the things that are around us. A concept is specified by 1) a symbol, which can be different from one language to another (table, tafel,.. ), 2) intension, which refers to the meaning of the concept (a table is the surface on which one can put his/her objects on. ), 3) extension, which consists of a number of examples of the concept (e.g. the table in the living room, and the table in the office). 
 </p>
 
 <h2>Literature</h2>
@@ -30,25 +30,25 @@ Replace this text with your takeaway of Lecture 6 about the topic of "Ontologies
 <h3>Gensler 2010</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Gensler. Cite it as [Gensler 2010]. Use between 100 and 200 words.
+Gensler 2002 introduces the reader to the concept of logic, its meaning, its benefits to the reader, and its uses in life. Logic is about analysing arguments, and about reaching out to new outcomes from a set of given premises. Logic skills can be of great importance  in many different aspects of our life, such as in medicine, in law, and in business. An argument consists of a number of premises and a conclusion. Gensler defines what a valid argument means, where an argument is valid if it is impossible for all premises to be true and the conclusion to be false. However, having a valid argument does not mean that all premises have to be true, but that the conclusion is logical based on the given premises. When we have a valid argument with all its premises being true, then we have a sound argument. A sound argument can be used to prove a conclusion. 
 </p>
 
 <h3>Odell 1994</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Odell. Cite it as [Odell 1994]. Use between 100 and 200 words.
+Odell (1994) defines what a composition is, where it is “a mechanism for forming an object whole using other objects as its parts.'' There are six kinds of composition relationships, and the kind of the composition relationship is determined depending on three three basic properties. The three properties are configuration: if the parts bear to each other, homeomerous: if the parts are the same kind as their whole, invariance: whether it is possible to separate the parts from their whole. Based on these three properties, the six kinds of composition relationships are 1) Component-integral object composition, which is the most common relationship and it requires a configuration between its parts. 2) Material-object composition, where an invariant configuration is required between its parts. 3) Portion-object composition, where a homeomeric configuration is required between its parts. 4) Place-area composition, where a homeomeric,invariant configuration is required between its parts. 5) Member-bunch composition, where none of the three properties is required, while it is required that the parts are members of the whole. 6) Member-partnership composition, where the invariant property is  required among the parts. 
 </p>
 
 <h3>Davis et al. 1993</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Davis. Cite it as [Davis et al. 1993]. Use between 100 and 200 words.
+Davis et al. (1993) identify what knowledge representation is, and they describe it through describing the five roles it plays. The first role knowledge representation plays is the surrogation, where it is considered to be a surrogate/substitute of something in the world to enable thinking about it and therefore to identify possible following consequences based on current situation. The second role is that knowledge representation consists of a number of commitments, which lead us to put the focus on a part of the world, and leaving the other parts as they are of less importance. The third role is the intelligent reasoning theory it includes, where three main terms can be used to express this intelligent reasoning theory at this role: 1) the fundamental concept of intelligent inference, 2) the possible inferences (the sanctioned interences), 3) and the inferences that should be included. The fourth role is providing guidance to organise information and therefore to facilitate making inferences. The fifth role is that knowledge representation is a tool/language to tell the machine about our world. 
 </p>
 
 <h3>Gruber 1995</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Gruber. Cite it as [Gruber 1995]. Use between 100 and 200 words.
+Formal ontologies are used as a way of knowledge sharing between software systems. Gruber (1995) identifies the role of formal ontologies in knowledge sharing, and the requirements an ontology has to meet to be formal, and reusable. There are five design criteria for an ontology that is designed with the purpose of knowledge sharing. 1) Clarity:  the ontology should have a clear, and defined concept. 2) Coherence: the ontology should include coherent inferences. 3) Extendibility: the ontology should be extendable. 4) Minimal encoding bias: the ontology should be designed with very little dependence on symbol-encoding, which can occur when implementation details are included. 5) Minimal ontological commitment: the ontology should be designed with minimum commitment to allow different parties to reuse the ontology as desired. Taking these criteria in consideration will help in designing a reusable ontology.
 </p>
 
 <h2>References</h2>
