--- a/takeaways4.html
+++ b/takeaways4.html
@@ -16,13 +16,13 @@
 <h3>Semantic Fire Fighting</h3>
 
 <p class="counter">
-Replace this text with your takeaway of Lecture 7 about the topic of "Semantic Fire Fighting". Use between 100 and 200 words.
+In the guest lecture, Van Leeuwen tells about his experience as a firefighter, where the main problem firefighters go in is outliers (going into a situation that is not expected). Van Leeuwen composes a question: how can AI help firefighters to take the correct action, and to be prepared before going into the fire? Basically, Multiple datasets are needed to be matched up to build a coherent system that contains connected information about the buildings, e.g. how buildings are connected to utilities, and is there a gas connection. Van Leeuwen and his colleagues started a project that is called FireGraph, which is an RDF Knowledge graph that connects more than 16 datasets, and It gets real time incident information in 2 seconds. FireGraph also contains information about the historic incidents that happened in a certain location. They also created a machine learning model, which they feed the address of the incident. Based on a number of characteristics, this system predicts if the location of the incident has a building that is different from the buildings of the neighborhood. In this way, the firefighter will be informed that he might face a new situation. 
 </p>
 
 <h3>Controlled Natural Language</h3>
 
 <p class="counter">
-Replace this text with your takeaway of Lecture 8 about the topic of "Controlled Natural Language". Use between 100 and 200 words.
+Controlled natural language CNL is a language designed based on a certain natural language (e.g. English) that it tries to memic. It is applied in many areas, including query interfaces, and Knowledge Representation. There are four dimensions in which we can classify languages (natural languages, and formal languages), which are precision, expressiveness, naturalness, and simplicity. Formal languages are very precise, inexpressive, unnatural, and very simple, in contrast to natural languages, which are very imprecise, expressive, natural, and very complex. Controlled natural languages go in the middle between natural languages, and formal languages. Syllogisms are a CNL, as it is constructed, and it is based on one language, that is ancient Greek, it is more restrictive than ancient Greek, it retains the natureness, and it is precise. Another example of a CNL is SBVR structured English. 
 </p>
 
 <h2>Literature</h2>
@@ -30,25 +30,25 @@ Replace this text with your takeaway of Lecture 8 about the topic of "Controlled
 <h3>Horrocks 2008</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Horrocks. Cite it as [Horrocks 2008]. Use between 100 and 200 words.
+According to Horrocks (2008), despite the success of the Web in regards to the number of users, and the accessibility, the information available on it was not integrated without human intervention, nor was it easily retrieved. Therefore, the Semantic Web has been developed, of which the aim was to allow automatic information integration, and accessibility to a wider community. However, the information on the Web was unstructured for a machine to be able to process and understand it. Therefore, the Resource Description Framework (RDF) language was developed. It is a simple language that consists of three components (subject,  predicate,  and  object), where the subject and the object are two nodes linked by an edge (the predicate) to describe a specific relationship. Even though RDF solved the problem of structuring the information and making relationships, it had limitations, and the need for a more powerful language increased, and therefore, the language OWL was developed. The key feature of OWL language was its basis in Description Logic, which allows for many features including reasoning and inference. 
 </p>
 
 <h3>Heath and Bizer 2011</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Heath and Bizer. Cite it as [Heath and Bizer 2011]. Use between 100 and 200 words.
+Heath and Bizer (2011) introduce the concept and the benefits of Linked data, which has emerged due to the need to have a tool that enables data retrieval and data reuse. The huge amount of data available on the Web, and the fact that companies and individuals are choosing to share their information on the Web, so that it becomes accessible to everyone, raises the need for a tool that enables the reuse of information. A possible solution to make the information available is to use APIs, but the technology of APIs makes it difficult for the information to be accessed and discovered. Linked data is a solution that addresses the problem of data accessibility and reusability, which has been enabled by the use of RDF language. The goal of Linked data is thus sharing and reusing information, which is possible when the data is well structured. The more structured the data is, the more reusable it is, and the easier it is to process this data.  
 </p>
 
 <h3>Miller 1995</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Miller. Cite it as [Miller 1995]. Use between 100 and 200 words.
+Miller (1995) introduces a lexical database that is called WordNet. It is an English machine readable database that contains more than 166000 word forms and sense pairs, where a pair consists of a form (a string with word form, e.g. noun, verb, adjective or adverb) and a sense (the meaning of the form). The word that has more than one sense is referred to as polysemous, while a word that shares the sense with one other word is synonymous to that word. Polysemy causes a problem that has not been addressed yet, which is the choice of the word sense in a given sentence. A human can understand which sense of the word has to be used when a word has more than one sense, which is not the case for the machine. Six different kinds of semantic relations exist in WordNet, which are synonymy, antonymy, hyponymy, meronymy, troponomy, and entailment. 
 </p>
 
 <h3>Kumar et al. 2013</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Kumar et al. Cite it as [Kumar et al. 2013]. Use between 100 and 200 words.
+According to Kumer et al. (2013), the way in which data mining and knowledge discovery occurs has led to a change in the design of the Web pages. There are three main data mining domains, which are usage mining, content mining, and structure mining. While implementing these mining techniques, the content’s presentation is ignored. However, Webzeitgeist is developed to support the design part of the Web site. It is a platform for generating web pages designs, and it contains more than 100000 Web pages, and 100 millions design elements. The architecture of Webzeitgeist is based on four principles: scalability, extensibility, completeness, and consistency. Webzeitgeist makes it possible to carry out some advanced queries, including querying pages with a specific kind of design, for example, it is possible to generate horizontally-scrolling pages. 
 </p>
 
 <h2>References</h2>
