--- a/takeaways6.html
+++ b/takeaways6.html
@@ -16,13 +16,13 @@
 <h3>Data Security</h3>
 
 <p class="counter">
-Replace this text with your takeaway of Lecture 11 about the topic of "Data Security". Use between 100 and 200 words.
+GDPR considers personal data and how it should be processed, where “personal data’ means any information relating to an identified or identifiable natural person (‘data subject’)” GDPR Art. 4(1). Data processing relates to any operation performed on personal data, for example collection, use, and retrieval. GDPR MASTer has a goal to deliver guidance to ensure that entities performing data processing are implementing the required measures to guarantee personal data security. This guidance is to be developed based on  decisions related to security violation of personal data processing. During this project, they analysed 30 cases of  security violation of personal data, and they found out that in most of the cases, the data was digital, in text format, the violation was in processing the data during the storage stage. 
 </p>
 
 <h3>Relations and Rules</h3>
 
 <p class="counter">
-Replace this text with your takeaway of Lecture 12 about the topic of "Relations and Rules". Use between 100 and 200 words.
+Relations and rules are used to describe relationships between classes, and individuals, and to build hierarchical structures. There are many types of hierarchical relations, for example instance - class, part - whole, and subclass - superclass. Aggregation (part - whole), and generalization (subclass - superclass) are two types that cause confusion to some people, they have both tree-like structure, and they are both transitive. However, aggregation usually uses an and-tree, whilst generalization uses an or-tree. Another difference is that aggregation uses an instance tree, while generalization uses a class tree. All types of relations have properties, for example degree, cardinality, symmetry, transitivity, and subrelations. OWL is the language that supports creating ontologies on the Web, but it supports only binary relations, and it does not support general rules which means that if..then.. relations are not supported by OWL.
 </p>
 
 <h2>Literature</h2>
@@ -30,13 +30,13 @@ Replace this text with your takeaway of Lecture 12 about the topic of "Relations
 <h3>Moreau and Groth 2013</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Moreau and Groth. Cite it as [Moreau and Groth 2013]. Use between 100 and 200 words.
+The origin of a piece of data considers the people and activities involved in producing a specific piece of  data. In some cases like in journalism, it is important that the origin of the data\information to be published  is known to be able to assess its quality and reliability. Therefore,  Moreau and Groth (2013) introduce PROV (provenance) which is an automated way to show the origin of data. PROV is a set of agents (people, organisations),  entities (any piece of data, e.g. articles, datasets. ), and activities, which produces a provenance graph that describes the origin of a piece of data. This graph has three provenance views, 1) the responsibility view, which shows who is  responsible for producing a specific piece of data, 2)the data flow view, which shows how data is dependent on other data, and process flow view, which shows how this piece of data was produced, and what processes were done to produce this piece of data. 
 </p>
 
 <h3>Baeza-Yates 2018</h3>
 
 <p class="counter">
-Replace this text with your takeaway of the paper by Baeza-Yates. Cite it as [Baeza-Yates 2018]. Use between 100 and 200 words.
+The rise of the internet and digital data, allows the bias on the Web to spread faster, which reflects our natural tendency as humans, to prefer one thing over another. Baeza-Yates (2018) describes the bias on the Web and has a goal to raise awareness of the bias that exists in Web content and design. This bias on the Web should be considered,, especially, the design of systems that address the users’ needs. Statistically, bias occurs because of  inaccurate experiment set-up which leads to biased distribution.  Data  bias is associated mainly with the demographics of Web users, as the educational, economical and technological characteristics of Web users play a role in the biased content on the Web. Algorithmic Bias occurs when the input data is biased, because biased input data causes the algorithm itself to produce biased output. Bias on user interaction occurs because of the user self selected biased interaction, and the user interface, which contains top recommendations that the user might never have seen before. 
 </p>
 
 <h2>References</h2>
