--- a/takeaways7.html
+++ b/takeaways7.html
@@ -16,13 +16,15 @@
 <h3>Smart, Connected and Open Audio-Visual Content</h3>
 
 <p class="counter">
-Replace this text with your takeaway of Lecture 13 about the topic of "Smart, Connected and Open Audio-Visual Content. Use between 100 and 200 words.
+The Netherlands institute for sound and vision (NISV) is a museum and a cultural archive located in Hilversum, and it preserves more than 100.000 hours of AV material. This archive includes digitized content of everything that is now being broadcasted on the television, as well as digitized old AV material. The archive should be accessible to all kinds of users, and based on that, an R & D department exists, where its goal is to enhance and improve the accessibility of NISV material to all kinds of users. That could be done in a framework of Smart, Connected, and Open AV heritage. First, the NISV archive should be open so that materials are reusable, and to achieve an open AV heritage, the collection is being available online. However, only 1% of the collection is open to the public, while the whole collection is available for research purposes. Second, the NISV archive should also be smart, where the data should have well metadata so that relevant concepts are associated with it. Lastly, The NISV archive should be connected internally and externally (with other museums), so that data can be compared together. 
 </p>
 
 <h3>Knowledge Maintenance and Evaluation</h3>
 
 <p class="counter">
-Replace this text with your takeaway of Lecture 14 about the topic of "Knowledge Maintenance and Evaluation". Use between 100 and 200 words.
+The knowledge organization of a model or a system has to be evaluated, where different evaluation types exist that can be performed depending on the type of the model\system. For example, ontologies can be evaluated by doing principled inspection or/and by checking semantic consistency and reasoning results. Systems can be evaluated by conducting users questionnaires, or by observing users when using the system or by interviewing users. Four different meta-properties exist for characterizing classes. These properties are rigidity, identity, unity, dependence. A rigid property is a property that must be present in all instances of a class. While a non rigid property is a property which does not have to be present in all instances, and an anti-rigid property is a property which does not have to be present in any instance. For identity property, +I is written to describe a class that has all its instances identifiable in the same way (e.g. person), and otherwise -I is written. Unity describes classes that are whole objects (+U), or non whole objects (∼
+U), or classes with wholes, and non wholes (-U). A class is dependent if its existence depends on the existence of another class (+D). 
+ 
 </p>
 
 <script src="https://raw.githack.com/ucds-vu/ko2021-templates/main/scripts.js"></script>
